[package]
name = "facet-deserialize"
version = "0.31.1"
edition = "2024"
rust-version = "1.87.0"
license = "MIT or Apache-2.0"
repository = "https://github.com/facet-rs/facet-deserialize"
description = "Event-based approach to deserialization for the facet ecosystem"
keywords = ["facet", "deserialization", "reflection"]
categories = [
    "encoding",
    "data-structures",
    "development-tools",
    "parsing",
    "no-std",
]

[features]
alloc = ["facet-core/alloc", "facet-reflect/alloc"]
std = ["alloc"]
ariadne = ["alloc", "dep:ariadne"]
rich-diagnostics = ["ariadne", "std"]
default = ["std", "rich-diagnostics"]

[dependencies]
ariadne = { version = "0.6.0", optional = true }
facet-core = { version = "0.31.7", default-features = false }
facet-reflect = { version = "0.31.7", default-features = false }
log = "0.4.27"
owo-colors = "4.2.2"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
    "user-hooks",
] }
facet = { version = "0.31.7" }
facet-testhelpers = { version = "0.31.7" }
